apps/staging/grafana/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
spec:
  tls:
    - hosts:
        - lia-kube.cloudist.solutions
      secretName: grafana-tls-secret
  rules:
    - host: lia-kube.cloudist.solutions
