apps/staging/grafana/patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
spec:
  tls:
    - hosts:
        - lia-kube.cloudist.solutions
      secretName: grafana-tls-secret
  rules:
    - host: lia-kube.cloudist.solutions
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
